packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__hoisted_fn_signal_in_loop.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 4707
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App = component$(() => {
  const data = { value: [
    { value: { id: 1, selected: { value: true } } },
    { value: { id: 2, selected: { value: false } } },
    { value: { id: 3, selected: { value: true } } }
  ]};
  
  return (
    <table>
      {data.value.map((row) => {
        return (
          <tr
            key={row.value.id}
            class={row.value.selected.value ? "danger" : ""}
          >
            <td>{row.value.id}</td>
          </tr>
        );
      })}
    </table>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,6CAqBhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const _hf0 = (p0)=>p0.value.selected.value ? "danger" : "";
const _hf0_str = 'p0.value.selected.value?"danger":""';
const _hf1 = (p0)=>p0.value.id;
const _hf1_str = "p0.value.id";
export const App_component_ckEPmXZlub0 = ()=>{
    const data = {
        value: [
            {
                value: {
                    id: 1,
                    selected: {
                        value: true
                    }
                }
            },
            {
                value: {
                    id: 2,
                    selected: {
                        value: false
                    }
                }
            },
            {
                value: {
                    id: 3,
                    selected: {
                        value: true
                    }
                }
            }
        ]
    };
    return /*#__PURE__*/ _jsxSorted("table", null, null, data.value.map((row)=>{
        return /*#__PURE__*/ _jsxSorted("tr", {
            class: _fnSignal(_hf0, [
                row
            ], _hf0_str)
        }, null, /*#__PURE__*/ _jsxSorted("td", null, null, _fnSignal(_hf1, [
            row
        ], _hf1_str), 1, null), 1, row.value.id);
    }), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;mBAgBmB,GAAI,KAAK,CAAC,QAAQ,CAAC,KAAK,GAAG,WAAW;;mBAExC,GAAI,KAAK,CAAC,EAAE;;yCAfC;IAC5B,MAAM,OAAO;QAAE,OAAO;YACpB;gBAAE,OAAO;oBAAE,IAAI;oBAAG,UAAU;wBAAE,OAAO;oBAAK;gBAAE;YAAE;YAC9C;gBAAE,OAAO;oBAAE,IAAI;oBAAG,UAAU;wBAAE,OAAO;oBAAM;gBAAE;YAAE;YAC/C;gBAAE,OAAO;oBAAE,IAAI;oBAAG,UAAU;wBAAE,OAAO;oBAAK;gBAAE;YAAE;SAC/C;IAAA;IAED,qBACE,WAAC,qBACE,KAAK,KAAK,CAAC,GAAG,CAAC,CAAC;QACf,qBACE,WAAC;YAEC,KAAK;;;+BAEL,WAAC;;mCAHI,IAAI,KAAK,CAAC,EAAE;IAMvB;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    563
  ]
}
*/
== DIAGNOSTICS ==

[]
