packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__issue_7216_add_test.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 4274
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
export default component$((props) => {
  return (<p 
		onHi$={() => 'hi'} 
		{...props.foo} 
		onHello$={props.helloHandler$} 
		{...props.rest} 
		onVar$={props.onVarHandler$} 
		onConst$={() => 'const'} 
		asd={"1"}
	/>);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEA,6BAAe,2CAUZ\"}")
============================= test.tsx_test_component_p_q_e_hi_ttOKZbY46GA.js (ENTRY POINT)==

export const test_component_p_q_e_hi_ttOKZbY46GA = ()=>'hi';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mDAIS,IAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_p_q_e_hi_ttOKZbY46GA",
  "entry": null,
  "displayName": "test.tsx_test_component_p_q_e_hi",
  "hash": "ttOKZbY46GA",
  "canonicalFilename": "test.tsx_test_component_p_q_e_hi_ttOKZbY46GA",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onHi$",
  "captures": false,
  "loc": [
    111,
    121
  ]
}
*/
============================= test.tsx_test_component_p_q_e_const_e6TYnIxnPLY.js (ENTRY POINT)==

export const test_component_p_q_e_const_e6TYnIxnPLY = ()=>'const';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"sDASY,IAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_p_q_e_const_e6TYnIxnPLY",
  "entry": null,
  "displayName": "test.tsx_test_component_p_q_e_const",
  "hash": "e6TYnIxnPLY",
  "canonicalFilename": "test.tsx_test_component_p_q_e_const_e6TYnIxnPLY",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onConst$",
  "captures": false,
  "loc": [
    239,
    252
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSplit } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_p_q_e_const_e6TYnIxnPLY = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_p_q_e_const_e6TYnIxnPLY"), "test_component_p_q_e_const_e6TYnIxnPLY");
const q_test_component_p_q_e_hi_ttOKZbY46GA = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_p_q_e_hi_ttOKZbY46GA"), "test_component_p_q_e_hi_ttOKZbY46GA");
//
export const test_component_LUXeXe0DQrg = (props)=>{
    return /*#__PURE__*/ _jsxSplit("p", {
        "q-e:hi": q_test_component_p_q_e_hi_ttOKZbY46GA,
        ...props.foo,
        "q-e:hello": props.helloHandler$,
        ...props.rest,
        "q-e:var": props.onVarHandler$
    }, {
        "q-e:const": q_test_component_p_q_e_const_e6TYnIxnPLY,
        asd: "1"
    }, null, 0, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0CAE0B,CAAC;IACzB,qBAAQ,UAAC;QACT,QAAK;QACJ,GAAG,MAAM,GAAG;QACb,aAAU,MAAM,aAAa;QAC5B,GAAG,MAAM,IAAI;QACd,WAAQ,MAAM,aAAa;;QAC3B,WAAQ;QACR,KAAK;;AAEP\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    75,
    274
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
